--- a/src/index.css
+++ b/src/index.css
@@ -5,7 +5,7 @@
   line-height: 1.5;
   font-weight: 400;
 
-  color-scheme: light;
+  /* color-scheme: light; */
   color: #213547;
   background-color: #ffffff;
 
@@ -29,3 +29,9 @@ body {
 #root {
   min-height: 100vh;
 }
+
+/* svg {
+  display: inline-block;
+  vertical-align: middle;
+  fill: currentColor;
+} */
