--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -124,6 +124,19 @@
   display: flex;
   align-items: flex-start;
   gap: 0.75rem;
+ }
+
+.contact-item a:hover {
+  opacity: 0.8;
+}
+
+.contact-item a:hover .contact-text p {
+  color: #bd73b0;
+  transition: color 0.3s ease; 
+}
+
+.contact-item a {
+  cursor: pointer;
 }
 
 .contact-icon {
